Fix content shrinking on mobile
applies hotfix from https://github.com/not-matthias/apollo/pull/135

--- a/sass/theme/parts/_misc.scss
+++ b/sass/theme/parts/_misc.scss
@@ -38,3 +38,7 @@ $medium: 800px;
   font-family: var(--header-font);
   margin: 4rem 0px 1rem 0px;
 }
+
+.content {
+  flex-shrink: 0;
+}
